# stoa-agent-risk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: diff.md  dimensions.md
docs/dev/: v0.2-implementation-map.md
docs/rules/: AI001.md  AI002.md  AI003.md  AI004.md  AI005.md  AI006.md  AI007.md  CTRL004.md  README.md
examples/: stoa-action.yml  stoa.toml
examples/meridian-ops/: COVERAGE.md  README.md  run-e2e.sh  stoa.toml
examples/meridian-ops/.github/: CODEOWNERS
examples/meridian-ops/agents/: compliance.py  devops.py  fraud.py  legacy.py  marketing.py  payments.py  research.py  triage.py
examples/meridian-ops/lib/: db.py  embeddings.py  user_agent.py
examples/meridian-ops/tests/: test_payments.py
examples/meridian-ops/web/: support_bot.ts
examples/support-desk/: README.md  RISK_MAP.md  embeddings.py  orchestrator.py
examples/support-desk/agents/: account_agent.py  billing_agent.py  escalation_agent.py  research_agent.py  triage_agent.py
examples/support-desk/sample-output/: registry.json  report.html
examples/support-desk/tests/: test_billing.py
examples/support-desk/tools/: database.py  diagnostics.py
examples/support-desk/utils/: user_agent.py
examples/support-desk/web/: support_widget.ts
scripts/: build_docs.py
scripts/fonts/: fonts_b64.json
site/: index.html
site/case-study/: index.html
site/demo-report/: index.html
site/docs/: index.html
site/docs/cli/: index.html
site/docs/configuration/: index.html
site/docs/diff/: index.html
site/docs/dimensions/: index.html
site/docs/example/: index.html
site/docs/getting-started/: index.html
site/docs/rules/: index.html
site/docs/rules/AI001/: index.html
site/docs/rules/AI002/: index.html
site/docs/rules/AI003/: index.html
site/docs/rules/AI004/: index.html
site/docs/rules/AI005/: index.html
site/docs/rules/AI006/: index.html
site/docs/rules/AI007/: index.html
site/docs/rules/CTRL004/: index.html
site/docs/schema/: index.html
src/stoa/: __init__.py  agent_detection.py  ai_rules.py  ai_taint.py  approvals.py  ast_layer.py  cli.py  config.py  diff.py  dimensions.py  flow.py  git_metadata.py  github.py  integration_detection.py  models.py  redaction.py  registry_diff.py  report_html.py  report_json.py  risk_detection.py  rules.py  sarif.py  scanner.py  suppressions.py  traversal.py
src/stoa/data/: dimensions.toml  model_aliases.toml
src/stoa/templates/: stoa.toml  stoa.yml  stoaignore
tests/: conftest.py  test_agent_detection.py  test_ai_rules_phase2.py  test_ai_taint_phase3.py  test_ast_layer.py  test_cli.py  test_diff.py  test_dimensions_phase4.py  test_e2e_meridian.py  test_flow.py  test_html_escape.py  test_parity.py  test_phase6.py  test_redaction.py  test_registry_diff_phase5.py  test_risk_detection.py  test_suppressions.py
tests/fixtures/example_repo/.github/: CODEOWNERS
tests/fixtures/example_repo/src/: embeddings_only.py  refund_agent.py  support_agent.ts  user_agent_parser.py
tests/fixtures/example_repo/tests/: test_refunds.py
