[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stoa-agent-risk"
version = "0.1.0"
description = "Local-first AI agent inventory and risk scanner: finds agent candidates with evidence, maps capabilities and integrations, and gates newly introduced high-confidence critical risks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ved Upadhyay", email = "iamved05@gmail.com" }]
keywords = ["ai-agents", "security", "static-analysis", "llm", "sast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pathspec>=0.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
stoa = "stoa.cli:main"

[project.urls]
Homepage = "https://stoa-features.vercel.app"
Repository = "https://github.com/iamved/stoa-agent-risk"
Issues = "https://github.com/iamved/stoa-agent-risk/issues"
Documentation = "https://github.com/iamved/stoa-agent-risk#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stoa = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
